--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>Stacky.js</title>
+  <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
   <main>
     <nav id="stackyHolder">
       <section>
-        <header class="stacky"><h4>Stacky.js</h4></header>
+        <header><h4>Stacky.js</h4></header>
         <article>
           <small class="arrow">Scroll</small>
           <h1>Stacky.js</h1>
         </article>
       </section>
       <section>
-        <header class="stacky"><h4>About</h4></header>
+        <header><h4>About</h4></header>
         <article>
-          <p>Stacky.js is a jQuery plugin for creating beautiful scrolling navigation lists with stacking headers.</p>
+          <p>Stacky.js is a simple JavaScript module for creating beautiful scrolling navigation lists with stacking headers.</p>
           <p>Scroll this page to see it in action!</p>
         </article>
       </section>
       <section>
-        <header class="stacky"><h4>Features</h4></header>
+        <header><h4>Features</h4></header>
         <article>
           <ul>
-            <li><strong>Smooth scrolling</strong> by disabling pointer events</li>
+            <li><strong>Vanilla JS</strong> without any dependencies</li>
             <li><strong>Lightweight</strong> at around 1KB minified</li>
             <li><strong>Refreshes</strong> on window resize and DOM mutation</li>
             <li><strong>Compatible</strong> with the latest version of your favorite browser</li>
@@ -35,36 +35,40 @@
         </article>
       </section>
       <section>
-        <header class="stacky"><h4>Download</h4></header>
+        <header><h4>Installation</h4></header>
+        <article>
+          <h5>NPM</h5>
+          <p>Install with npm <code>npm install stacky.js</code> and import in your JS file</p>
+          <h5>Browser</h5>
+          <p>Download the files and include in your HTML file <code>&lt;script src="path/to/stacky.min.js"&gt;&lt;/script&gt;</code></p>
+          <p>Check out the <a href="https://github.com/matronator/stacky.js#getting-started" title="How to use Stacky.js">Getting Started</a> section of the README for example code.</p>
+        </article>
+      </section>
+      <section>
+        <header><h4>Download for use in browser</h4></header>
         <article>
           <p>Get the latest version for:</p>
-          <p><a class="btn" title="Unminified version" href="https://raw.github.com/iclanzan/slinky/master/dist/jquery.slinky.js">Development</a>
-          <a class="btn" title="Minified version" href="https://raw.github.com/iclanzan/slinky/master/dist/jquery.slinky.min.js">Production</a></p>
+          <p><a class="btn" title="Unminified version" href="https://raw.githubusercontent.com/matronator/stacky.js/master/dist/stacky.js">Development</a>
+          <a class="btn" title="Minified version" href="https://raw.githubusercontent.com/matronator/stacky.js/master/dist/stacky.min.js">Production</a></p>
         </article>
       </section>
       <section>
-        <header class="stacky"><h4>Usage</h4></header>
-        <article>
-          <p>Include the downloaded file in a script tag after jQuery and call <code>.slinky()</code> on the jQuery element you want to activate Slinky on.</p>
-          <p>Check out the <a href="https://github.com/iclanzan/slinky#getting-started" title="How to use Slinky">Getting Started</a> section of the README for example code.</p>
-        </article>
-      </section>
-      <section>
-        <header class="stacky"><h4>Contributing</h4></header>
+        <header><h4>Contributing</h4></header>
         <article>
           <p>There is always room for improvement in any software and <em>Stacky.js</em> is no different.</p>
-          <p>The code is hosted on <a href="https://github.com/iclanzan/slinky" title="Stacky.js on GitHub">GitHub</a> and pull requests are more than welcome as long as you follow the <a href="https://github.com/iclanzan/slinky/blob/master/CONTRIBUTING.md" title="How to contribute to Stacky.js">guidelines for contributors</a>.</p>
+          <p>The code is hosted on <a href="https://github.com/matronator/stacky.js" title="Stacky.js on GitHub">GitHub</a> and pull requests are more than welcome.</p>
         </article>
       </section>
       <section>
-        <header class="stacky"><h4>More</h4></header>
+        <header><h4>More</h4></header>
         <article>
-          <p>This plugin is brought to you by <a title="Sorin’s blog" href="http://iclanzan.com">Sorin Iclanzan</a>, creator of <a href="http://songpane.com" title="SongPane set list manager">SongPane</a>, and released under the <a href="https://github.com/iclanzan/slinky/blob/master/LICENSE">MIT license</a>.</p>
+          <p>This plugin is brought to you by <a title="Matronator's portfolio" href="https://matronator.com">Matronator</a></p>
+          <p>Original jQuery plugin Slinky.js and design of this page by <a title="Sorin’s blog" href="http://iclanzan.com">Sorin Iclanzan</a></p>
         </article>
       </section>
     </nav>
   </main>
-  <script src="./index.js" type="module"></script>
-  <script src="./test.js" type="module"></script>
+  <script src="./dist/stacky.min.js"></script>
+  <script src="./src/test.js"></script>
 </body>
 </html>
