--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <header><h4>About</h4></header>
         <article>
           <p>Stacky.js is a simple JavaScript module for creating beautiful scrolling navigation lists with stacking headers.</p>
+          <p>It is a modern alternative to <a title="Slinky.js" href="https://github.com/iclanzan/slinky">Slinky.js</a> without jQuery or any other dependency.</p>
           <p>Scroll this page to see it in action!</p>
         </article>
       </section>
